# pfp

./: Cargo.toml  README.md  awsv2-test.service
.github/workflows/: rust.yml
src/: aws-upload.sh  context.rs  echo.sh  encrypt.sh  lib.rs  main.rs  oldmain.rs  upload.sh
