[package]
name = "pfp"
version = "0.1.0"
authors = ["Dustin Cannon <dustin@shunyata.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# cli arg parsing
structopt = "0.3"

# logging
log = "0.4"
env_logger = "0.9"

# time
chrono = "0.4"

# signals
signal-hook = "0.3"