[package]
name = "pfp"
version = "0.1.1"
authors = ["Dustin Cannon <dustin@shunyata.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# cli arg parsing
clap = { version = "4.5.17", features = ["derive"] }

# logging
log = "0.4"
env_logger = "0.11"

# signals
signal-hook = "0.3"

# parallelism
rayon = "1.10.0"

# file system
walkdir = "2.5.0"
